TODO

Features
* allow set of segment filename during write (as alternative writing locations)
* add read and write random functions
* implement write resume

Tooling
* detect maximum possible segment size on file system (e.g. FAT)

Test
* retrieve data from the information file on open
* make sure certain values cannot be changed if writing/reading from raw files

20100204
* fixed issue in glob
* fix for missing sections in information file

20100202
* minor changes

20100201
* worked on metadata functions for libsmio

20100129
* worked on metadata functions for libsmio
* refactored common code

20100128
* renamed get/set_segment_size to get/set_maximum_segment_size

20100125
* updated libbfio
* added libsmraw_handle_set_maximum_amount_of_open_handles
* updated msvscpp files

20100124
* updated common, liberror (snwprintf fix)
* update for missing varadic macro support in Borland C++ Builder 5.5

20100121
* worked on Windows support

20100120
* updated libbfio
* fix for write value initialization
* fix for seek offset

20100116
* media values no longer returned if no file io pool available
* worked on read

20100110
* added msvscpp and borland project files
* fixes for Windows build

20100109
* Worked on initial version
* Tested write with ewfexport

20100108
* Created initial version based on earlier media input/output code
